<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_gradient_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="@dimen/_120sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sunset_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans_black" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/photo"
                app:riv_border_color="@color/white"
                app:riv_border_width="1dp"
                app:riv_oval="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_toEndOf="@id/iv_profile"
                android:fontFamily="@font/montserrat_bold"
                android:text="Jhon Duo"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/close" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_6sdp"
            android:background="@color/color_FAAF46" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_privacy" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/my_downloads"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_my_downloads" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_passward" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/discover_people"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_discover_people" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_logout" />


        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/setting" />

    </LinearLayout>
</layout>